fix search on mobile

--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -507,6 +507,9 @@ h2{
   border: none;
 }
 
+.-autocomplete-container{
+    top: 210px !important;
+}
 
 .nojob,
 .-autocomplete-list li {
